--- a/data/genki/vocab_05.yaml
+++ b/data/genki/vocab_05.yaml
@@ -6,7 +6,7 @@
   kana: やまかわさん
   meaning: Mr./Ms. Yamakawa
   important: true
-- kanji: 富士山
+- kanji: ふじ山
   kana: ふじさん
   meaning: Mt. Fuji
   important: false
