added special case for kanjis, that are usually written part kana

--- a/data/genki/vocab_07.yaml
+++ b/data/genki/vocab_07.yaml
@@ -17,7 +17,7 @@
   meaning: child
   important: true
   wanikani_kanji: 子供
-  note: 神さま is usually written with the first part kanji and the second part hiragana.
+  note: 子ども is usually written with the first part kanji and the second part hiragana.
 
 # girl
 # boy
