fixed mayor vocabulary

--- a/data/genki/vocab_11.yaml
+++ b/data/genki/vocab_11.yaml
@@ -183,7 +183,7 @@
   kana: しやくしょ
   meaning: city hall
   important: false
-- kanji: しちょう
+- kanji: 市長
   kana: しちょう
   meaning: mayor
   important: false
